--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:site_name" content="Snow-Stamp" />
 		<meta property="og:title" content="Discord Snowflake to Timestamp Converter" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://snowsta.mp/og-image.png" />
+		<meta property="og:image" content="https://peppy-truffle-d7e0f5.netlify.app/og-image.png" />
 		<meta property="og:image:type" content="image/png">
 		<meta property="og:image:width" content="300" />
 		<meta property="og:image:height" content="300" />
@@ -19,13 +19,13 @@
 		<meta property="og:url" content="https://snowsta.mp" />
 		<meta property="og:description" content="Get the exact time and date from a Discord Snowflake" />
 		<meta property="fb:app_id" content="412006463740772">
-		<link rel="manifest" href="https://snowsta.mp/manifest.json">
+		<link rel="manifest" href="https://peppy-truffle-d7e0f5.netlify.app/manifest.json">
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" href="favicon.ico" sizes="16x16 32x32 48x48" />
 
 		<title>Discord Snowflake to Timestamp Converter</title>
 
-		<link rel="search" type="application/opensearchdescription+xml" title="Snow-Stamp" href="https://snowsta.mp/opensearch.xml" />
+		<link rel="search" type="application/opensearchdescription+xml" title="Snow-Stamp" href="https://peppy-truffle-d7e0f5.netlify.app/opensearch.xml" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
